--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="num">num</string>
     <string name="door_name">Door Name</string>
     <string name="travelling_remember_to_lock_your_door">Travelling? Remember to lock your door!</string>
+    <string name="add_new_door">Add New Door</string>
 </resources>
